--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,10 @@
   "license": "ISC",
   "packageManager": "pnpm@10.26.1",
   "dependencies": {
+    "@prisma/client": "^7.2.0",
     "express": "^5.2.1"
+  },
+  "devDependencies": {
+    "prisma": "^7.2.0"
   }
 }
