--- a/server/package.json
+++ b/server/package.json
@@ -13,8 +13,12 @@
   "license": "ISC",
   "packageManager": "pnpm@10.26.1",
   "dependencies": {
+    "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^7.2.0",
-    "express": "^5.2.1"
+    "@prisma/client-runtime-utils": "7.2.0",
+    "dotenv": "^17.2.3",
+    "express": "^5.2.1",
+    "pg": "^8.16.3"
   },
   "devDependencies": {
     "prisma": "^7.2.0"
