--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "dev": "node index.js",
-	"postinstall": "prisma generate",
+    "postinstall": "prisma generate",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -17,6 +17,8 @@
     "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^7.2.0",
     "@prisma/client-runtime-utils": "7.2.0",
+    "argon2": "^0.44.0",
+    "cookie-session": "^2.1.1",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "pg": "^8.16.3"
